fix padding on small screens.

--- a/app/page.css
+++ b/app/page.css
@@ -14,7 +14,7 @@
 .header {
   color: black;
   @apply sticky top-0;
-  padding: 1rem;
+  padding: 1rem 1.5rem;
   display: flex;
   align-items: center;
   justify-content: flex-start;
