--- a/components/ChoiceList.css
+++ b/components/ChoiceList.css
@@ -57,6 +57,6 @@
   border-radius: 0rem 0.3rem 0.3rem 0rem;
 }
 
-.sub {
-  
+ul {
+  margin: 0rem 0.5rem;
 }
